@@ -712,6 +712,10 @@ EXT:PROXY
 proxy
 CUSTOM:*PROXY*
 proxy
+EXT:BASE64-ENCODE
+base64
+EXT:BASE64-DECODE
+base64
 EXT:EXPAND-FORM
 code-walk
 EXT:MODULE-INFO
