@@ -1,3 +1,9 @@
+2005-11-23  Sam Steingold  <sds@gnu.org>
+
+	* clhs.lisp (base64-encode, base64-decode): stolen from CLLIB
+	(proxy): do not separate username with password
+	(open-http): send "Authorization" when proxy user:pass is specified
+
 2005-11-22  Sam Steingold  <sds@gnu.org>
 
 	fix bug #[ 1364177 ]: infinite loop in regexp-split
